clang: node.cpp:284 IDX_INIT macro use uninitialized field _out

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • Environment:

      Arch Linux
      clang version 3.4 (tags/RELEASE_34/final)

    • b04

        The error message as follows, every IDX_INIT called in the initialize list will cause this warning, and I cannot make sense out of the current code.

        /home/hjen/ws/9dev/hotspot/src/share/vm/opto/node.cpp:326:10: error: field '_out' is uninitialized when used here [-Werror,-Wuninitialized]
          : _idx(IDX_INIT(req))
                 ^
        /home/hjen/ws/9dev/hotspot/src/share/vm/opto/node.cpp:284:58: note: expanded from macro 'IDX_INIT'
        #define IDX_INIT(req) this->Init((req), (Compile*) this->_out)
                                                                 ^ ^

              Assignee:
              Henry Jen
              Reporter:
              Henry Jen
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: