8033215: clang: node.cpp:284 IDX_INIT macro use uninitialized field _out

Reviewed-by: twisti, kvn